syntax = "proto3";

package infrastructure.rpc.order.v1;

option go_package = "github.com/shortlink-org/shop/oms/internal/infrastructure/rpc/order/v1";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "infrastructure/rpc/order/v1/model/v1/model.proto";

// OrderService is the service that provides order operations.
service OrderService {
  // Create creates a new order.
  rpc Create(infrastructure.rpc.order.v1.model.v1.CreateRequest) returns (google.protobuf.Empty);

  // Get retrieves an order by its ID.
  rpc Get(infrastructure.rpc.order.v1.model.v1.GetRequest) returns (infrastructure.rpc.order.v1.model.v1.GetResponse);

  // Delete deletes an order by its ID.
  rpc Cancel(infrastructure.rpc.order.v1.model.v1.CancelRequest) returns (google.protobuf.Empty);

  // UpdateDeliveryInfo updates delivery information for an order.
  rpc UpdateDeliveryInfo(infrastructure.rpc.order.v1.model.v1.UpdateDeliveryInfoRequest) returns (google.protobuf.Empty);
}
